--- a/css/login.css
+++ b/css/login.css
@@ -36,9 +36,9 @@ body {
     padding: 5px;
     font-size: 12px;
     font-weight: bold;
-    color: #8a0000;
-    border: 1px solid #8a0000;
-    background-color: #e58f8f;
+     color: gray;
+    border: 1px solid gray;
+    background-color: lightgrey;
     opacity: 0;
 }
 
@@ -49,9 +49,9 @@ body {
     padding: 5px;
     font-size: 12px;
     font-weight: bold;
-    color: #8a0000;
-    border: 1px solid #8a0000;
-    background-color: #e58f8f;
+color: gray;
+    border: 1px solid gray;
+    background-color: lightgrey;
     opacity: 0;
 }
 
